--- a/static/partials/data_manager_window.html
+++ b/static/partials/data_manager_window.html
@@ -1,4 +1,27 @@
-<div class="content" ng-app="myapp">
+<ul class="collapsible popout" data-collapsible="accordion">
+ <li>
+    <!--div class="collapsible-header"><i class="material-icons">filter_drama</i>First Section</div>
+    <div class="collapsible-body">
+        <ul class="collapsible" data-collapsible="accordion">
+            <li-->
+                <user-data name="diagnostic output" directory="diagnostic_output"></user-data>
+                <user-data name="model output" directory="model_output"></user-data>
+                <user-data name="observations" directory="observations"></user-data>
+                <!--model-output>
+                </model-output>
+                <observations>
+                </observations>
+                <diagnostic-output>
+                </diagnostic-output-->
+            <!--/li>
+        </ul> 
+    </div-->    
+ </li>
+ <li>
+ </li>
+</ul>
+
+<!--div class="content">
     <la-modal>
     </la-modal>
-</div>
+</div-->
