--- a/static/partials/visualization_manager.html
+++ b/static/partials/visualization_manager.html
@@ -2,20 +2,10 @@
     <div ng-show="vizualizer != 'active' && !selected_source"  class="dashboard-show-hide" style="display:block;" id="viz_data_select">
         <ul>
             <li>
-                <a href="" 
-                   ng-click="select_source('diagnostic')" 
-                   class="waves-effect waves-light btn"
-                   style="margin: 1vw; width: 100%;">
-                    Diagnostic
-                </a>        
+                <a href="" ng-click="select_source('diagnostic')" class="waves-effect waves-light btn" style="margin: 1vw; width: 100%;">Diagnostic</a>        
             </li>
             <li>
-                <a href="" 
-                   ng-click="select_source('model')" 
-                   class="waves-effect waves-light btn"
-                   style="margin: 1vw; width: 100%;">
-                    Model
-                </a>   
+                <a href="" ng-click="select_source('model')" class="waves-effect waves-light btn" style="margin: 1vw; width: 100%;">Model</a>   
             </li>
         </ul>
     </div>
