--- a/templates/web_fe/dashboard.html
+++ b/templates/web_fe/dashboard.html
@@ -26,6 +26,7 @@
 	<link type="text/css" rel="stylesheet" href="{% static "css/goldenlayout-dark-theme.css"%}"/>
   <link type="text/css" rel="stylesheet" href="{% static "css/goldenlayout-light-theme.css"%}"/>
   <link type="text/css" rel="stylesheet" href="{% static "css/widgets.css"%}"/>
+  <link type="text/css" rel="stylesheet" href="{% static "css/test.css"%}"/>
 
   <!-- folding cube -->
   <link type="text/css" rel="stylesheet" href="{% static "css/sk-circle.css"%}"/>
