--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
 
     {% block extra_headers %} {% endblock %}
     <script type="text/javascript" src="{% static "js/resources/extensions.js"%}"></script>
+    <!--script type="text/javascript" src="{% static "js/resources/dafuq.js"%}"></script-->
   </head>
 
   <body role="document" class="day">
@@ -45,7 +46,6 @@
         </ul>
       </div>
     </nav>
-
 
     <div class="container theme-showcase" role="main">
       {% block content %}
