--- a/static/partials/data_manager_window.html
+++ b/static/partials/data_manager_window.html
@@ -5,5 +5,7 @@
     <user-data name="Observations" directory="observations"></user-data>
  </li>
 </ul>
-<the-modal img_type="img">
-<the-modal img_type="pdf">
+<!--import-modal theimport="import"></the-modal>
+<nersc-modal thenersc="nersc"></the-modal-->
+<text-modal thetexttype="txt"></text-modal>
+<the-modal thefiletype="img"></the-modal>
