--- a/static/css/test.css
+++ b/static/css/test.css
@@ -1,20 +1,3 @@
-#test {
-        background-color: teal;
-}
-
-#testingthis {
-    color:blue !important;
-    cursor:pointer;
-    text-decoration:underline;
-    background-color: #F7F7F7;
-    opacity: 0.4;
-}
-
-#testingthis:hover {
-    text-decoration:none;
-    //text-shadow: 1px 1px 1px #555;
-}
-
 .file_picture {
     width: 200px;
     height: 120px;
@@ -25,16 +8,11 @@
     height: auto;
 }
 
-    
-/*.zindex { 
-    z-index: 99000 !important;
-}*/
-
-.div:first-child {
-    opacity: .99;
-}
-
-.modaaal {
-    position: relative;
-    z-index: 1;
+#edit_text_modal_pre {
+    padding: 10px;
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;  
 }
