--- a/templates/web_fe/dashboard.html
+++ b/templates/web_fe/dashboard.html
@@ -44,12 +44,12 @@
   <script src="{% static "js/resources/mode-json.js" %}"></script>
   <script src="{% static "js/resources/ui-ace.min.js" %}"></script>
 
-  <script src="{% static "js/controllers/app.js" %}"></script>
+  <script src="{% static "js/app.js" %}"></script>
   <script src="{% static "js/controllers/cdat.js" %}"></script>
   <script src="{% static "js/controllers/data_manager.js" %}"></script>
   <script src="{% static "js/controllers/run_manager.js" %}"></script>
   <script src="{% static "js/controllers/notification_manager.js" %}"></script>
-
+<script src="{% static "js/controllers/textModal.js" %}"></script>
   <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
 
   <!-- Typehead and Bloodhound -->
